--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   auto_route: ^0.3.0
   flutter_mobx: ^1.0.1
   mobx: ^1.0.2
+  dart_req_state: 
+    path: '../'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
